# ladybug_driver_ws

./: ReadMe.md  ladybug3转接方案.docx
Ladybug SDK/: Feedback to Developers.htm  Ladybug_SDK_1_16_Release_notes.html
Ladybug SDK/LaydbugSDK_1.16.3.48_Ubuntu16.04_amd64/: log
Ladybug doc/Firmware/: Ladybug3_firmware_releasenotes_1.6.3.00.TXT
src/pointgrey_ladybug/: CMakeLists.txt
src/pointgrey_ladybug/include/: Configuration.h  ConfigurationLoader.cpp  ConfigurationLoader.h  ImageGrabber.cpp  ImageGrabber.h  ImageRecorder.cpp  ImageRecorder.h  LadybugFunctors.cpp  LadybugFunctors.h  LadybugRecorderConsoleConfiguration.cpp  LadybugRecorderConsoleConfiguration.h  resource.h  stdafx.cpp  stdafx.h
src/pointgrey_ladybug/launch/: display_raw_data.launch  save_jpeg_data.launch
src/pointgrey_ladybug/src/ladybug/: ladybug_driver_jpeg.cpp  ladybug_driver_raw.cpp  pgr2bmp.cpp  pgr2tiff.cpp
